Bug 1719328 - Fix an embarrassing typo in BrowserChild::RecvPreserveLayers. r=Mossop a=Aryx

This can cause the tab switcher to get confused. The tab switcher clears this
flag in order to get layer updates, but of course that wasn't happening and
warmed-up tabs after preserveLayers(true) had been called (due to window
minimization on Windows, or occlusion on macOS) ended up in a forever-loading
state.

Quite unfortunate that I didn't notice it when writing or skimming over my
patch this morning, that it passed review, and that compilers don't complain
about this, sigh.

Differential Revision: https://phabricator.services.mozilla.com/D119271