dom/ipc/BrowserChild.cpp
@@ -2984,7 +2984,7 @@ void BrowserChild::MakeHidden() {
 }
 
 IPCResult BrowserChild::RecvPreserveLayers(bool aPreserve) {
-  mIsPreservingLayers = true;
+  mIsPreservingLayers = aPreserve;
 
   PresShellActivenessMaybeChanged();
 
